--- a/arch/arm/boot/dts/imx28-wirenboard50.dts
+++ b/arch/arm/boot/dts/imx28-wirenboard50.dts
@@ -38,18 +38,26 @@
 				compatible = "fsl,imx28-spi";
 				pinctrl-names = "default";
 				pinctrl-0 = <&spi2_pins_a>;
-				status = "okay";
-
-
+				status = "disabled";
 			};
 
 			pinctrl@80018000 {
 				pinctrl-names = "default";
 				pinctrl-0 = <&hog_pins_a
 							 &io_pin_gpio
+							 &mod2_pins
 				>;
 
-				hog_pins_a: hog@0 {
+
+				mod2_pins: mod2_pins@0 {
+					reg = <0>;
+					fsl,pinmux-ids = <
+					>;
+					fsl,drive-strength = <MXS_DRIVE_8mA>;
+					fsl,voltage = <MXS_VOLTAGE_HIGH>;
+					fsl,pull-up = <MXS_PULL_DISABLE>;
+				};
+								hog_pins_a: hog@0 {
 					reg = <0>;
 					fsl,pinmux-ids = <
 						0x40d3 /* FEC RESET  */
@@ -113,11 +121,56 @@
 
 
 
+
 					>;
 					fsl,drive-strength = <0>;
 					fsl,voltage = <1>;
  					fsl,pull-up = <0>;
 				};
+
+
+
+				ssp1_pins_a: ssp1@0 {
+					reg = <0>;
+					fsl,pinmux-ids = <
+						MX28_PAD_GPMI_RDY1__SSP1_CMD
+						MX28_PAD_GPMI_D00__SSP1_D0
+						MX28_PAD_GPMI_WRN__SSP1_SCK
+						MX28_PAD_GPMI_D03__SSP1_D3
+					>;
+					fsl,drive-strength = <MXS_DRIVE_8mA>;
+					fsl,voltage = <MXS_VOLTAGE_HIGH>;
+					fsl,pull-up = <MXS_PULL_ENABLE>;
+				};
+
+				spi1_pins_a_gpio: spi1@0 {
+					reg = <0>;
+					fsl,pinmux-ids = <
+						MX28_PAD_GPMI_RDY1__GPIO_0_21
+						MX28_PAD_GPMI_D00__GPIO_0_0
+						MX28_PAD_GPMI_WRN__GPIO_0_25
+						MX28_PAD_GPMI_D03__GPIO_0_3
+					>;
+					fsl,drive-strength = <MXS_DRIVE_8mA>;
+					fsl,voltage = <MXS_VOLTAGE_HIGH>;
+					fsl,pull-up = <MXS_PULL_ENABLE>;
+				};
+
+				spi2_pins_a_gpio: spi2@0 {
+					reg = <0>;
+					fsl,pinmux-ids = <
+						MX28_PAD_SSP2_SCK__GPIO_2_16
+						MX28_PAD_SSP2_MOSI__GPIO_2_17
+						MX28_PAD_SSP2_MISO__GPIO_2_18
+						MX28_PAD_SSP2_SS0__GPIO_2_19
+					>;
+					fsl,drive-strength = <MXS_DRIVE_8mA>;
+					fsl,voltage = <MXS_VOLTAGE_HIGH>;
+					fsl,pull-up = <MXS_PULL_ENABLE>;
+				};
+
+
+
 
 
 
