--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -290,6 +290,7 @@ dtb-$(CONFIG_ARCH_MXS) += imx23-evk.dtb \
 	imx23-wirenboard-rcterm1.dtb \
 	imx23-wb-core-test.dtb \
 	imx28-wirenboard50.dtb \
+	imx28-wirenboard50-test1.dtb \
 	imx28-wirenboard52.dtb \
 	imx23-stmp378x_devb.dtb \
 	imx28-apf28.dtb \
