ARM: dts: imx28-wirenboard52: Enable SPDIF transmitter

--- a/arch/arm/boot/dts/imx28-wirenboard52.dts
+++ b/arch/arm/boot/dts/imx28-wirenboard52.dts
@@ -205,6 +205,12 @@
 				};
 
 			};
+
+			spdif: spdif@80054000 {
+				pinctrl-names = "default";
+				pinctrl-0 = <&spdif_pins>;
+				status = "okay";
+			};
 		};
 
 	};
@@ -235,4 +241,9 @@
 		};
 	};
 
+	sound-spdif {
+		compatible = "fsl,mxs-spdif-audio";
+		model = "On-board SPDIF";
+		spdif-controller = <&spdif>;
+	};
 };
