--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1228,6 +1228,7 @@ dtb-$(CONFIG_MACH_SUN8I) += \
 	sun8i-r40-wirenboard730.dtb \
 	sun8i-r40-wirenboard731.dtb \
 	sun8i-r40-wirenboard732.dtb \
+	sun8i-r40-wirenboard733.dtb \
 	sun8i-s3-lichee-zero-plus.dtb \
 	sun8i-s3-pinecube.dtb \
 	sun8i-t3-cqa3t-bv3.dtb \
